new update image

--- a/dev/config/config.pug
+++ b/dev/config/config.pug
@@ -147,7 +147,7 @@
         {
             name:'2 Play Fibra óptica 30Mbps',
             title: 'Precio primer mes',
-            img:'/img/plan1.png',
+            img:'https://raw.githubusercontent.com/szapataq/website-test/master/public/img/plan1.png',
             price: 'S/ 60',
             subtitle:'Precio mensual: S/ 70',
             vDown: {
@@ -166,7 +166,7 @@
         {
             name:'2 Play Fibra óptica 30Mbps',
             title: 'Precio primer mes',
-            img:'/img/plan2.png',
+            img:'https://raw.githubusercontent.com/szapataq/website-test/master/public/img/plan2.png',
             price: 'S/ 89',
             subtitle:'Precio mensual: S/ 100',
             vDown: {
@@ -185,7 +185,7 @@
         {
             name:'2 Play Fibra óptica 30Mbps',
             title: 'Precio primer mes',
-            img:'/img/plan3.png',
+            img:'https://raw.githubusercontent.com/szapataq/website-test/master/public/img/plan3.png',
             price: 'S/ 119',
             subtitle:'Precio mensual: S/ 145',
             vDown: {
